Fix SVG on IE

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -334,9 +334,15 @@ img {
     position: relative;
 
     .project_logo {
+      height: 0;
+      position: relative;
+      width: 100%;
+
       svg,
       img {
-        float: left;
+        left: 0;
+        position: absolute;
+        top: 0;
       }
     }
 
